# ray_tracer_challenge

./: .gitignore  Cargo.toml  LICENSE  book_notes.md  readme.md  rust_learning_notes.md  todo.md
demos/: Cargo.toml
lib/src/: camera.rs  canvas.rs  constants.rs  intersection.rs  lib.rs  material.rs  matrix.rs  object_id.rs  ray.rs  tuple.rs  world.rs
lib/src/light/: light.rs  point_light.rs
lib/src/pattern/: mod.rs  pattern.rs  rings.rs  stripes.rs  uv.rs
lib/src/sampling/: halton.rs  mod.rs
lib/src/shape/: group.rs  mod.rs  plane.rs  smooth_triangle.rs
lib/src/test/: utils.rs
src/: bounding_box.rs  camera.rs  canvas.rs  color.rs  constants.rs  intersection.rs  lib.rs  light.rs  material.rs  matrix.rs  obj_parser.rs  object_id.rs  parse_error.rs  pattern.rs  ray.rs  rust_learning_notes.md  shape.rs  transformations.rs  tuple.rs  world.rs
src/light/: light.rs  mod.rs  phong_lighting.rs  point_light.rs  rectangle_light.rs
src/pattern/: checkers.rs  gradient.rs  mod.rs  pattern.rs  rings.rs  sine_2d.rs  solid.rs  stripes.rs  uv.rs  uv_checkers.rs
src/shape/: base_shape.rs  cone.rs  csg.rs  cube.rs  cylinder.rs  group.rs  mod.rs  plane.rs  shape.rs  smooth_triangle.rs  sphere.rs  test_shape.rs  triangle.rs
src/test/: utils.rs
tests/: divide.rs
