[package]
name = "ray_tracer_challenge"
version = "0.1.0"
authors = ["Nathan Glenn <garfieldnate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
linked_hash_set = "0.1.3"
derivative = "1.0.3"
downcast-rs = "1.1.1"
dyn-clone = "1.0.1"
rand = "0.7"

# Currently no bin or doc tests
[lib]
doctest = false
[[bin]]
name = "3d_sphere"
test = false
[[bin]]
name = "clock_dots"
test = false
[[bin]]
name = "first_patterns"
test = false
[[bin]]
name = "first_plane"
test = false
[[bin]]
name = "first_scene"
test = false
[[bin]]
name = "here_be_dragons"
test = false
[[bin]]
name = "hexagons"
test = false
[[bin]]
name = "projectile"
test = false
[[bin]]
name = "reflect_refract"
test = false
[[bin]]
name = "soft_shadows"
test = false
[[bin]]
name = "sphere_outline"
test = false
[[bin]]
name = "teapot"
test = false


