[package]
name = "ray_tracer_challenge"
version = "0.1.0"
authors = ["Nathan Glenn <garfieldnate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
linked_hash_set = "0.1.3"
derivative = "1.0.3"
downcast-rs = "1.1.1"
dyn-clone = "1.0.1"
rand = "0.7"
enum-map = "0.6.2"
typed-builder = "0.5.1"
impl_ops = "0.1.1"
